feat(manageGroups|createGroup): Added pages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,7 +74,7 @@
       {
         // https://github.com/prettier/prettier#options
         "singleQuote": true,
-        "trailingComma": "all"
+        "trailingComma": "none"
       }
     ]
   },
