--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^1.1.0",
     "@zeit/next-sass": "^0.2.0",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "formik": "^0.11.11",
@@ -25,6 +26,7 @@
     "next": "^6.1.1",
     "next-routes": "^1.4.2",
     "node-sass": "^4.9.1",
+    "owl.carousel": "^2.3.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -32,6 +34,7 @@
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^5.0.7",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
