--- a/package.json
+++ b/package.json
@@ -12,34 +12,36 @@
   "author": "Mykola Krys",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
-    "@zeit/next-sass": "^0.2.0",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "formik": "^0.11.11",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "next": "^6.1.1",
+    "next": "^7.0.2",
     "next-routes": "^1.4.2",
-    "node-sass": "^4.9.1",
+    "node-sass": "^4.9.4",
     "owl.carousel": "^2.3.4",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-intl": "^2.4.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^5.0.7",
-    "react-slick": "^0.23.1",
-    "redux": "^4.0.0",
+    "react-slick": "^0.23.2",
+    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "styled-jsx": "^2.2.7",
-    "yup": "^0.25.1"
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
