--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^5.0.7",
+    "video-react": "0.13.0",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
