--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
@@ -25,10 +26,10 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "next": "^7.0.2",
     "next-assets-import": "0.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-images": "^1.0.1",
-    "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.9.4",
     "owl.carousel": "^2.3.4",
@@ -39,12 +40,12 @@
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^5.0.7",
-    "video-react": "0.13.0",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "styled-jsx": "^2.2.7",
+    "video-react": "0.13.0",
     "yup": "^0.26.6"
   },
   "devDependencies": {
