--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "formik": "^0.11.11",
+    "http-proxy-middleware": "^0.19.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
