--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -41,11 +42,12 @@
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "styled-jsx": "^2.2.7",
     "video-react": "0.13.0",
     "yup": "^0.26.6"
