--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-API_HOST=http://18.217.30.162
+API_HOST=http://192.168.4.137:3090
+#   "message": "The INSERT statement conflicted
+#    with the FOREIGN KEY constraint \"FK_AspNetUsers_Organizations_OrganizationId\". 
+#    The conflict occurred in database \"metknow_dev\", table \"dbo.Organizations\",
+#     column 'Id'.\r\n
+#    The statement has been terminated."
