--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^5.1.1",
+    "qs": "^6.5.2",
+    "react-notifications": "^1.4.3",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
