--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Mykola",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.1.2",
+    "@babel/runtime": "^7.1.5",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "@types/next": "^7.0.4",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
@@ -34,11 +35,12 @@
     "next-compose-plugins": "^2.1.1",
     "next-images": "^1.0.1",
     "next-routes": "^1.4.2",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "owl.carousel": "^2.3.4",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-infinite-scroller": "^1.2.2",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
@@ -70,6 +72,6 @@
     "eslint-plugin-jsx-a11y": "~2.1.0",
     "eslint-plugin-prettier": "^2.4.0",
     "eslint-plugin-react": "~6.1.1",
-    "prettier": "^1.9.2"
+    "prettier": "^1.15.1"
   }
 }
