--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "allowJs": true,
       "allowSyntheticDefaultImports": true,
+      "importHelpers": true,
       "baseUrl": ".",
       "jsx": "preserve",
       "lib": ["dom", "es2017"],
@@ -15,6 +16,6 @@
       "skipLibCheck": true,
       "sourceMap": true,
       "strict": true,
-      "target": "esnext"
+      "target": "esnext",
     }
   }
