--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-infinite-scroller": "^1.2.2",
     "react-dropzone": "^7.0.1",
     "react-image-crop": "^6.0.4",
+    "qs": "^6.5.2",
+    "react-infinite-scroll-component": "^4.2.0",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
