--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-infinite-scroller": "^1.2.2",
+    "react-dropzone": "^7.0.1",
+    "react-image-crop": "^6.0.4",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
