--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "@types/next": "^7.0.5",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
@@ -38,19 +39,21 @@
     "node-sass": "^4.10.0",
     "owl.carousel": "^2.3.4",
     "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
     "react": "^16.6.3",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.6.3",
-    "react-infinite-scroller": "^1.2.2",
     "react-dropzone": "^7.0.1",
     "react-image-crop": "^6.0.4",
-    "qs": "^6.5.2",
     "react-infinite-scroll-component": "^4.2.0",
+    "react-infinite-scroller": "^1.2.2",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.0",
     "react-no-ssr": "^1.1.0",
-    "react-redux": "^5.1.1",
     "react-notifications": "^1.4.3",
+    "react-redux": "^5.1.1",
     "react-slick": "^0.23.2",
+    "react-svg": "^7.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
