--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "express-http-proxy": "^1.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "formik": "^0.11.11",
     "http-proxy-middleware": "^0.19.0",
